--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover; /* Ajuste l'image pour qu'elle couvre toute la zone sans distorsion */
+/*         object-fit: cover; /* Ajuste l'image pour qu'elle couvre toute la zone sans distorsion */ */
       }
     </style>
   </head>
